tests/ui/parser/misspelled-keywords/static.stderr
error: expected one of `!` or `::`, found `a`
  --> $DIR/static.rs:1:8
   |
LL | Static a = 0;
   |        ^ expected one of `!` or `::`

error: aborting due to 1 previous error

