tests/ui/parser/misspelled-keywords/static.rs
Static a = 0;
//~^ ERROR expected one of

fn main() {}
